@@ -3,6 +3,7 @@ Version 1.1.1 (09-10-2014)
 - Add spikeslab in markerSelection function
 - Bugs correction in markerSelection for logistic loss
 - Default value correction for cv.glmnet in markerSelection
+- Code factorization in SNPselection.R
 
 Version 1.1.0 (23-07-2014)
 - Vignette update
